--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -40,15 +40,12 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
           github-token: ${{ secrets.github_token }}
-          path-to-lcov: lcov.info
-
-    - name: Create an issue on build failure
-      uses: actions-ecosystem/action-create-issue@v1
-      if: ${{ failure() }}
+          path-to-lcov: lcov.info              
+    
+    - uses: nashmaniac/create-issue-action@v1.1
+      name: Create an issue on build failure
       with:
-         github_token: ${{ secrets.github_token }}
-         title: Investigate Nightly Build Failure
-         body: |
-            echo "https://github.com/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}"
-         labels: |
-           nightlybuild
+        title: Investigate Nightly Build Failure
+        token: ${{secrets.GITHUB_TOKEN}}
+        labels: nightlybuild
+        body: https://github.com/${{GITHUB_REPOSITORY}}/actions/runs/${{GITHUB_RUN_ID}}         
