--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -48,4 +48,4 @@ jobs:
         title: Investigate Nightly Build Failure
         token: ${{secrets.GITHUB_TOKEN}}
         labels: nightlybuild
-        body: https://github.com/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}         
+        body: https://github.com/${{env.GITHUB_REPOSITORY}}/actions/runs/${{env.GITHUB_RUN_ID}}
