--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -10,7 +10,7 @@ jobs:
     name: "Nightly Build"
     env:
         ASPNETCORE_ENVIRONMENT: "Production"
-        ACTION_URL: echo ${GITHUB_SERVER_URL}/${GITHUB_REPOSITORY}/actions/runs/${GITHUB_RUN_ID}
+        ACTION_URL: ${{env.GITHUB_SERVER_URL}}/${{env.GITHUB_REPOSITORY}}/actions/runs/${{env.GITHUB_RUN_ID}}
 
     runs-on: ubuntu-latest
 
