--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/checkout@v2.3.4
 
     - name: Set Up Variables
-      run: echo echo "action_url=$GITHUB_SERVER_URL" >> $GITHUB_ENV
+      run: echo "action_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_ENV
       
     - name: Restore Nuget Packages
       run: dotnet restore CallbackHandler.sln --source https://api.nuget.org/v3/index.json --source https://www.myget.org/F/transactionprocessing/api/v3/index.json
