--- a/CallbackHandler/CallbackHandler.csproj
+++ b/CallbackHandler/CallbackHandler.csproj
@@ -6,7 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
+	  <PackageReference Include="Lamar" Version="7.0.0" />
+	  <PackageReference Include="Lamar.Microsoft.DependencyInjection" Version="7.0.0" />
+
+	  <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="5.0.1" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.14.0" />
     <PackageReference Include="Shared" Version="1.1.0" />
@@ -20,7 +23,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CallbackHandler.DataTransferObjects\CallbackHandler.DataTransferObjects.csproj" />
     <ProjectReference Include="..\CallbackHandler.BusinessLogic\CallbackHandler.BusinessLogic.csproj" />
     <ProjectReference Include="..\CallbackHandler.DataTransferObjects\CallbackHandler.DataTransferObjects.csproj" />
   </ItemGroup>
