--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -32,20 +32,26 @@ jobs:
         dotnet test "CallbackHandler.CallbackMessageAggregate.Tests\CallbackHandler.CallbackMessageAggregate.Tests.csproj"
         dotnet test "CallbackHandler.Tests\CallbackHandler.Tests.csproj"
 
-    - name: Build Docker Images 
+    - name: Publish Images to Docker Hub - Pre Release
+      if: ${{ github.event.release.prerelease == true }} 
       run: |
-        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:latest --tag stuartferguson/callbackhandler:${{ steps.get_version.outputs.VERSION }}
+        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:dev
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/callbackhandler:dev
 
-    - name: Publish Images to Docker Hub
+    - name: Publish Images to Docker Hub - Formal Release
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
+        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhansler:latest
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
         docker push stuartferguson/callbackhandler:latest
-        docker push stuartferguson/callbackhandler:${{ steps.get_version.outputs.VERSION }}
 
     - name: Publish API
+      if: ${{ github.event.release.prerelease == false }} 
       run: dotnet publish "CallbackHandler\CallbackHandler.csproj" --configuration Release --output publishOutput
 
     - name: Install Octopus CLI
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
         sudo apt update && sudo apt install --no-install-recommends gnupg curl ca-certificates apt-transport-https && \
         curl -sSfL https://apt.octopus.com/public.key | sudo apt-key add - && \
@@ -53,6 +59,7 @@ jobs:
         sudo apt update && sudo apt install octopuscli
 
     - name: Pack Files for Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo pack
         --outFolder /home/runner/work/CallbackHandler/CallbackHandler
@@ -64,6 +71,7 @@ jobs:
         --logLevel=verbose
 
     - name: Push Package to Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo push
         --server ${{ secrets.OCTOPUS_URL }}
@@ -72,6 +80,7 @@ jobs:
         --overwrite-mode IgnoreIfExists
     
     - name: Get Release
+      if: ${{ github.event.release.prerelease == false }} 
       id: getrelease
       uses: octokit/request-action@v2.0.17
       with:
@@ -80,6 +89,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build Release Notes
+      if: ${{ github.event.release.prerelease == false }} 
       id: buildreleasenotes
       uses: gr2m/get-json-paths-action@v1.x
       with:
@@ -87,6 +97,7 @@ jobs:
           releasenote: "body"
     
     - name: Create & Deploy Release in Octopus
+      if: ${{ github.event.release.prerelease == false }} 
       run: >-
         octo  create-release
         --server ${{ secrets.OCTOPUS_URL }}
@@ -100,6 +111,7 @@ jobs:
         --releasenotes "${{ steps.buildreleasenotes.outputs.releasenote }}" 
         
     - name: Build and Publish Nuget Packages
+      if: ${{ github.event.release.prerelease == false }} 
       run: |
         dotnet pack "CallbackHandler.DataTransferObjects\CallbackHandler.DataTransferObjects.csproj" /p:PackageVersion=${{ steps.get_version.outputs.VERSION }} --output Nugets -c Release            
         dotnet nuget push Nugets/CallbackHandler.DataTransferObjects.${{ steps.get_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
