--- a/.github/workflows/pushtomain.yml
+++ b/.github/workflows/pushtomain.yml
@@ -1,4 +1,4 @@
-name: Publish Pre-Release Nuget 
+name: Publish Pre-Release Nuget and Docker
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: "Publish Pre-Release Nugets"
+    name: "Publish Pre-Release Nugets and Docker"
     env:
         ASPNETCORE_ENVIRONMENT: "Production"
 
@@ -48,3 +48,10 @@ jobs:
         dotnet nuget push Nugets/CallbackHandler.DataTransferObjects.${{ steps.next_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
         dotnet pack "CallbackHandler.CallbackMessage.DomainEvents\CallbackHandler.CallbackMessage.DomainEvents.csproj" /p:PackageVersion=${{ steps.next_version.outputs.VERSION }} --output Nugets -c Release
         dotnet nuget push Nugets/CallbackHandler.CallbackMessage.DomainEvents.${{ steps.next_version.outputs.VERSION }}.nupkg --api-key ${{ secrets.MYGET_APIKEY }} --source https://www.myget.org/F/transactionprocessing/api/v2/package
+
+    - name: Publish Images to Docker Hub
+      run: |
+        docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:master
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/callbackhandler:master
+        
