--- a/CallbackHandler/appsettings.Development.json
+++ b/CallbackHandler/appsettings.Development.json
@@ -6,5 +6,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "EventStoreSettings": {
+    //"ConnectionString": "esdb://admin:changeit@127.0.0.1:2113?tls=true&tlsVerifyCert=false",
+    "ConnectionString": "esdb+discover:127.0.0.1:2113?tls=false&keepAliveTimeout=10000&keepAliveInterval=10000",
+    "UserName": "admin",
+    "Password": "changeit"
   }
 }
