--- a/CallbackHandler.CallbackMessage.DomainEvents/CallbackHandler.CallbackMessage.DomainEvents.csproj
+++ b/CallbackHandler.CallbackMessage.DomainEvents/CallbackHandler.CallbackMessage.DomainEvents.csproj
@@ -1,10 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0</TargetFrameworks>
+		<TargetFramework>net6.0</TargetFramework>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Shared" Version="1.1.9" />
-		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.1.9" />
+		<PackageReference Include="Shared" Version="1.3.0" />
+		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.0" />
 	</ItemGroup>
 </Project>
