--- a/CallbackHandler.BusinessLogic/CallbackHandler.BusinessLogic.csproj
+++ b/CallbackHandler.BusinessLogic/CallbackHandler.BusinessLogic.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="MediatR" Version="10.0.1" />
-		<PackageReference Include="Shared" Version="1.3.1" />
-		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.1" />
-		<PackageReference Include="Shared.EventStore" Version="1.3.1" />
+		<PackageReference Include="Shared" Version="1.3.7" />
+		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.7" />
+		<PackageReference Include="Shared.EventStore" Version="1.3.7" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\CallbackHandler.CallbackMessageAggregate\CallbackHandler.CallbackMessageAggregate.csproj" />
