--- a/CallbackHandler.CallbackMessageAggregate/CallbackHandler.CallbackMessageAggregate.csproj
+++ b/CallbackHandler.CallbackMessageAggregate/CallbackHandler.CallbackMessageAggregate.csproj
@@ -9,8 +9,9 @@
 		<ProjectReference Include="..\CallbackHandlers.Models\CallbackHandlers.Models.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Shared" Version="1.3.1" />
-		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.1" />
-		<PackageReference Include="Shared.EventStore" Version="1.3.1" />
+		<PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
+		<PackageReference Include="Shared" Version="1.3.7" />
+		<PackageReference Include="Shared.DomainDrivenDesign" Version="1.3.7" />
+		<PackageReference Include="Shared.EventStore" Version="1.3.7" />
 	</ItemGroup>
 </Project>
