Fix health checks

--- a/CallbackHandler/appsettings.Development.json
+++ b/CallbackHandler/appsettings.Development.json
@@ -8,8 +8,9 @@
     }
   },
   "EventStoreSettings": {
-    "ConnectionString": "esdb://admin:changeit@127.0.0.1:2113?tls=true&tlsVerifyCert=false",
+    //"ConnectionString": "esdb://admin:changeit@127.0.0.1:2113?tls=true&tlsVerifyCert=false",
     //"ConnectionString": "esdb+discover:127.0.0.1:2113?tls=false&keepAliveTimeout=10000&keepAliveInterval=10000",
+    "Insecure": true, 
     "UserName": "admin",
     "Password": "changeit"
   }
