--- a/.github/workflows/pushtomain.yml
+++ b/.github/workflows/pushtomain.yml
@@ -54,4 +54,22 @@ jobs:
         docker build . --file CallbackHandler/Dockerfile --tag stuartferguson/callbackhandler:master
         docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
         docker push stuartferguson/callbackhandler:master
+
+  buildwidows:
+    name: "Publish Pre-Release Docker for Windows"
+    env:
+        ASPNETCORE_ENVIRONMENT: "Production"
+
+    runs-on: windows-2019
+
+    steps:
+    - uses: actions/checkout@v2.3.4 
+      with:
+        fetch-depth: 0
+
+    - name: Publish Windows Images to Docker Hub
+      run: |
+        docker build . --file CallbackHandler/Dockerfilewindows --tag stuartferguson/callbackhandlerwindows:master
+        docker login --username=${{ secrets.DOCKER_USERNAME }} --password=${{ secrets.DOCKER_PASSWORD }}
+        docker push stuartferguson/callbackhandlerwindows:master
         
