--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install NET 7
       uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.101'
 
     - name: Set Up Variables
       run: echo "action_url=$GITHUB_SERVER_URL/$GITHUB_REPOSITORY/actions/runs/$GITHUB_RUN_ID" >> $GITHUB_ENV
@@ -37,27 +37,16 @@ jobs:
         dotnet test "CallbackHandler.CallbackMessageAggregate.Tests\CallbackHandler.CallbackMessageAggregate.Tests.csproj" /p:CollectCoverage=true /p:Exclude="[xunit*]*" /p:ExcludeByAttribute="Obsolete" /p:ExcludeByAttribute="GeneratedCodeAttribute" /p:ExcludeByAttribute="CompilerGeneratedAttribute" /p:ExcludeByAttribute="ExcludeFromCodeCoverageAttribute" /p:CoverletOutput="../lcov2.info" /maxcpucount:1 /p:CoverletOutputFormat="lcov"
         dotnet test "CallbackHandler.Tests\CallbackHandler.Tests.csproj" /p:CollectCoverage=true /p:Exclude="[xunit*]*" /p:ExcludeByAttribute="Obsolete" /p:ExcludeByAttribute="GeneratedCodeAttribute" /p:ExcludeByAttribute="CompilerGeneratedAttribute" /p:ExcludeByAttribute="ExcludeFromCodeCoverageAttribute" /p:CoverletOutput="../lcov3.info" /maxcpucount:1 /p:CoverletOutputFormat="lcov"
 
-    #- name: Setup Node.js for use with actions
-    #  uses: actions/setup-node@v3
-    #  with:
-    #    node-version: 16
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3  
+      with:
+        files: ./lcov1.info,./lcov2.info,./lcov3.info              
     
-    #- name: Combine Coverage
-    #  run: |
-    #    npm i lcov-result-merger
-    #    ./node_modules/lcov-result-merger/bin/lcov-result-merger.js '*.info' 'lcov.info' 
-
-    #- name: Upload Code Coverage
-    #  uses: coverallsapp/github-action@master
-    #  with:
-    #      github-token: ${{ secrets.github_token }}
-    #      path-to-lcov: lcov.info              
-    
-    #- uses: nashmaniac/create-issue-action@v1.1
-    #  if: ${{ failure() }}
-    #  name: Create an issue on build failure
-    #  with:
-    #    title: Investigate Nightly Build Failure
-    #    token: ${{secrets.GITHUB_TOKEN}}
-    #    labels: nightlybuild
-    #    body: Url is ${{env.action_url}}
+    - uses: dacbd/create-issue-action@main
+      if: ${{ failure() }}
+      name: Create an issue on build failure
+      with:
+        title: Investigate Nightly Build Failure
+        token: ${{secrets.GITHUB_TOKEN}}
+        labels: nightlybuild
+        body: Url is ${{env.action_url}}
