--- a/CallbackHandler.DataTransferObjects/CallbackHandler.DataTransferObjects.csproj
+++ b/CallbackHandler.DataTransferObjects/CallbackHandler.DataTransferObjects.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
 	  <TargetFrameworks>net7.0;netstandard2.0</TargetFrameworks>
+	  <DebugType>None</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
