--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -7,11 +7,20 @@ on:
 
 jobs:
   check:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
+    name: Check latest commit
+    outputs:
+      should_run: ${{ steps.should_run.outputs.should_run }}
     steps:
-      - id: nightly-check
-        name: Check for changes since last nightly
-        uses: lukecarr/nightly-check@v0.1.0
+      - uses: actions/checkout@v2
+      - name: print latest_commit
+        run: echo ${{ github.sha }}
+
+      - id: should_run
+        continue-on-error: true
+        name: check latest commit is less than a day
+        if: ${{ github.event_name == 'schedule' }}
+        run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
 
   build:
     name: "Nightly Build"
@@ -21,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check
-    if: ${{ needs.check.outputs.changes != 'false' }}
+    if: ${{ needs.check_date.outputs.should_run != 'false' }}
 
     steps:
     - uses: actions/checkout@v2.3.4
