--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -10,17 +10,17 @@ jobs:
     runs-on: ubuntu-latest
     name: Check latest commit
     outputs:
-      should_run: ${{ steps.should_run.outputs.should_run }}
+      commitcount: ${{ steps.commitswithintime.outputs.has-new-commits-within-time }}
     steps:
       - uses: actions/checkout@v2
-      - name: print latest_commit
-        run: echo ${{ github.sha }}
+        with:
+          fetch-depth: 0
 
-      - id: should_run
-        continue-on-error: true
-        name: check latest commit is less than a day
-        if: ${{ github.event_name == 'schedule' }}
-        run: test -z $(git rev-list  --after="24 hours"  ${{ github.sha }}) && echo "::set-output name=should_run::false"
+      - name: Check for commits within time 
+        uses: AlexHolderDeveloper/CommitsWithinTime@v1.1.5
+        id: commitswithintime
+        with:
+          hours: 24
 
   build:
     name: "Nightly Build"
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check
-    if: ${{ needs.check_date.outputs.should_run != 'false' }}
+    if: ${{ needs.check_date.outputs.commitcount > 0 }}
 
     steps:
     - uses: actions/checkout@v2.3.4
