--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
 
     needs: check
-    if: ${{ needs.check_date.outputs.commitcount > 0 }}
+    if: ${{ needs.check.outputs.commitcount > 0 }}
 
     steps:
     - uses: actions/checkout@v2.3.4
