--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -17,7 +17,8 @@ jobs:
           fetch-depth: 0
 
       - name: Check for commits within time 
-        uses: AlexHolderDeveloper/CommitsWithinTime@v1.1.5
+        #uses: AlexHolderDeveloper/CommitsWithinTime@v1.1.5
+        uses: TransactionProcessing/CommitsWithinTime@1.0.0
         id: commitswithintime
         with:
           hours: 24
