--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          #fetch-depth: 0
 
       - name: Check for commits within time 
         #uses: AlexHolderDeveloper/CommitsWithinTime@v1.1.5
