--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -105,6 +105,7 @@ jobs:
       with:
         api_key: ${{ secrets.OCTOPUS_APIKEY }}
         server: ${{ secrets.OCTOPUS_URL }}
+        space: ${{ secrets.OCTOPUS_SPACE }}
         project: 'Callback Handler'
         release_number: ${{steps.create_release.outputs.release_number}}
         environments: |
