--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -81,6 +81,15 @@ jobs:
         with:
           name: callbackhandler
 
+      - name: Remove existing  Windows service
+        run: |
+          $serviceName = "Transaction Processing - Callback Handler"
+          # Check if the service exists
+          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
+            Stop-Service -Name $serviceName
+            sc.exe delete $serviceName
+          }
+
       - name: Unzip the files
         run: |
           Expand-Archive -Path callbackhandler.zip -DestinationPath "C:\txnproc\transactionprocessing\callbackhandler" -Force
@@ -89,12 +98,7 @@ jobs:
         run: |
           $serviceName = "Transaction Processing - Callback Handler"
           $servicePath = "C:\txnproc\transactionprocessing\callbackhandler\CallbackHandler.exe"
-          
-          # Check if the service exists
-          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
-            Stop-Service -Name $serviceName
-            sc.exe delete $serviceName
-          }
+                   
           New-Service -Name $serviceName -BinaryPathName $servicePath -Description "Transaction Processing - CallbackHandler" -DisplayName "Transaction Processing - CallbackHandler" -StartupType Automatic
           Start-Service -Name $serviceName  
 
@@ -114,16 +118,19 @@ jobs:
         run: |
           Expand-Archive -Path callbackhandler.zip -DestinationPath "C:\txnproc\transactionprocessing\callbackhandler" -Force
       
+      - name: Remove existing  Windows service
+        run: |
+          $serviceName = "Transaction Processing - Callback Handler"
+          # Check if the service exists
+          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
+            Stop-Service -Name $serviceName
+            sc.exe delete $serviceName
+          }      
       - name: Install as a Windows service
         run: |
           $serviceName = "Transaction Processing - Callback Handler"
           $servicePath = "C:\txnproc\transactionprocessing\callbackhandler\CallbackHandler.exe"
           
-          # Check if the service exists
-          if (Get-Service -Name $serviceName -ErrorAction SilentlyContinue) {
-            Stop-Service -Name $serviceName
-            sc.exe delete $serviceName
-          }
           New-Service -Name $serviceName -BinaryPathName $servicePath -Description "Transaction Processing - CallbackHandler" -DisplayName "Transaction Processing - CallbackHandler" -StartupType Automatic
           Start-Service -Name $serviceName
 
