--- a/.github/workflows/nightlybuild.yml
+++ b/.github/workflows/nightlybuild.yml
@@ -41,6 +41,7 @@ jobs:
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3  
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: ./lcov1.info,./lcov2.info,./lcov3.info              
     
     - uses: dacbd/create-issue-action@main
