--- a/.github/workflows/createrelease.yml
+++ b/.github/workflows/createrelease.yml
@@ -15,6 +15,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2.3.4
 
+    - name: Install NET 9
+      uses: actions/setup-dotnet@v4.0.1
+      with:
+        dotnet-version: '9.0.x'
+
     - name: Get the version
       id: get_version
       run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
