--- a/CallbackHandler.IntegrationTests/CallbackHandler.IntegrationTests.csproj
+++ b/CallbackHandler.IntegrationTests/CallbackHandler.IntegrationTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
 	  <TargetFramework>net9.0</TargetFramework>
@@ -15,8 +15,8 @@
 	  <PackageReference Include="NUnit" Version="4.3.2" />
 	  <PackageReference Include="NUnit3TestAdapter" Version="5.0.0" />
 	  <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.0" />
-	  <PackageReference Include="Shared" Version="2025.6.1" />
-    <PackageReference Include="Shared.IntegrationTesting" Version="2025.6.1" />
+	  <PackageReference Include="Shared" Version="2025.6.2" />
+    <PackageReference Include="Shared.IntegrationTesting" Version="2025.6.2" />
   </ItemGroup>
 
   <ItemGroup>
