--- a/CallbackHandler.Tests/CallbackHandler.Tests.csproj
+++ b/CallbackHandler.Tests/CallbackHandler.Tests.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Lamar" Version="15.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.10" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
@@ -25,6 +26,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CallbackHandler\CallbackHandler.csproj" />
+  </ItemGroup>
+	   
+  <ItemGroup>
+    <None Update="xunit.runner.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
